@@ -8,8 +8,9 @@ import com.example.backend.domain.define.account.user.repository.UserRepository;
 import com.example.backend.domain.define.study.category.info.repository.StudyCategoryRepository;
 import com.example.backend.domain.define.study.category.mapping.StudyCategoryMapping;
 import com.example.backend.domain.define.study.category.mapping.repository.StudyCategoryMappingRepository;
+import com.example.backend.domain.define.study.convention.StudyConvention;
+import com.example.backend.domain.define.study.convention.repository.StudyConventionRepository;
 import com.example.backend.domain.define.study.info.StudyInfo;
-import com.example.backend.domain.define.study.info.constant.RepositoryInfo;
 import com.example.backend.domain.define.study.info.repository.StudyInfoRepository;
 import com.example.backend.domain.define.study.member.StudyMember;
 import com.example.backend.domain.define.study.member.repository.StudyMemberRepository;
@@ -27,6 +28,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static com.example.backend.domain.define.study.member.constant.StudyMemberRole.STUDY_LEADER;
 import static com.example.backend.domain.define.study.member.constant.StudyMemberStatus.STUDY_ACTIVE;
@@ -36,6 +38,8 @@ import static com.example.backend.domain.define.study.member.constant.StudyMembe
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class StudyInfoService {
+    private final static String DEFAULT_NAME = "default convention";
+    private final static String DEFAULT_CONTENT = "^[a-zA-Z0-9]{6} .*";
 
     private final StudyInfoRepository studyInfoRepository;
     private final StudyMemberRepository memberRepository;
@@ -43,6 +47,7 @@ public class StudyInfoService {
     private final StudyMemberRepository studyMemberRepository;
     private final StudyCategoryRepository studyCategoryRepository;
     private final UserRepository userRepository;
+    private final StudyConventionRepository studyConventionRepository;
 
     @Transactional
     public StudyInfoRegisterResponse registerStudy(StudyInfoRegisterRequest request, UserInfoResponse userInfo) {
@@ -59,9 +64,11 @@ public class StudyInfoService {
         Optional<User> user = userRepository.findById(userInfo.getUserId());
         user.get().addUserScore(5);
 
+        // 기본 컨벤션 생성
+        registerDefaultConvention(studyInfo.getId());
+
         return StudyInfoRegisterResponse.of(studyInfo, categories);
     }
-
 
     @Transactional
     public void updateStudyInfo(StudyInfoUpdateRequest request, Long studyInfoId) {
@@ -115,6 +122,9 @@ public class StudyInfoService {
                 = studyMemberRepository.findStudyMemberListByStudyInfoListJoinUserInfo(studyInfoIdList);
         Map<Long, List<UserNameAndProfileImageResponse>> studyUserInfoMap = getStudyUserInfoMap(studyMemberWithUserInfoResponses);
 
+        List<StudyInfoListWithMemberResponse> withMemberResponses =
+                convertToWithMemberResponse(studyInfoListResponse, studyUserInfoMap);
+
 
         // Map<STUDY_INFO_ID, List<STUDY_CATEGORY_NAME>>
         List<CategoryResponseWithStudyId> categoryResponseWithStudyIdList
@@ -123,8 +133,7 @@ public class StudyInfoService {
 
 
         StudyInfoListAndCursorIdxResponse response = StudyInfoListAndCursorIdxResponse.builder()
-                .studyInfoList(studyInfoListResponse)
-                .studyUserInfoMap(studyUserInfoMap)
+                .studyInfoList(withMemberResponses)
                 .studyCategoryMappingMap(studyCategoryMappingMap)
                 .build();
         response.setNextCursorIdx();
@@ -146,6 +155,7 @@ public class StudyInfoService {
                 .count(studyInfoRepository.findStudyInfoCount(userId, myStudy))
                 .build();
     }
+
     // StudyInfoDetailResponse를 생성해주는 함수
     private static StudyInfoDetailResponse getStudyInfoDetailResponse(StudyInfo studyInfo, List<String> categoryNames, Long userId) {
         return StudyInfoDetailResponse.of(studyInfo, categoryNames, userId);
@@ -208,7 +218,7 @@ public class StudyInfoService {
                         .studyInfoId(studyInfo.getId())
                         .studyCategoryId(categoryId)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         studyCategoryMappingRepository.saveAll(studyCategoryMapping);
         return categoriesId;
@@ -239,14 +249,21 @@ public class StudyInfoService {
                 .lastCommitDay(null)
                 .profileImageUrl(request.getProfileImageUrl())
                 .notice(null)
-                .repositoryInfo(RepositoryInfo.builder()
-                        .owner(userInfo.getGithubId())
-                        .name(userInfo.getName())
-                        .branchName(request.getBranchName())
-                        .build())
+                .repositoryInfo(request.getRepositoryInfo())
                 .periodType(request.getPeriodType())
                 .build();
         return studyInfoRepository.save(studyInfo);
+    }
+
+    // 기본 컨벤션 생성
+    public void registerDefaultConvention(Long id) {
+        // 기본 컨벤션 저장
+        studyConventionRepository.save(StudyConvention.builder()
+                .studyInfoId(id)
+                .name(DEFAULT_NAME)
+                .content(DEFAULT_CONTENT)
+                .isActive(true)
+                .build());
     }
 
     public StudyInfo findStudyInfoByIdOrThrowException(Long studyInfoId) {
@@ -255,5 +272,17 @@ public class StudyInfoService {
                     log.warn(">>>> {} : {} <<<<", studyInfoId, ExceptionMessage.STUDY_INFO_NOT_FOUND.getText());
                     return new StudyInfoException(ExceptionMessage.STUDY_INFO_NOT_FOUND);
                 });
+    }
+
+    public static List<StudyInfoListWithMemberResponse> convertToWithMemberResponse(
+            List<StudyInfoListResponse> studyInfoListResponses,
+            Map<Long, List<UserNameAndProfileImageResponse>> userInfoMap) {
+
+        return studyInfoListResponses.stream()
+                .map(studyInfo -> {
+                    List<UserNameAndProfileImageResponse> userInfo = userInfoMap.getOrDefault(studyInfo.getId(), new ArrayList<>());
+                    return StudyInfoListWithMemberResponse.from(studyInfo, userInfo);
+                })
+                .collect(Collectors.toList());
     }
 }
